--- a/estilos.css
+++ b/estilos.css
@@ -14,7 +14,8 @@ body {
     background-size: 17% auto; /* Ancho del 25% y altura automática */
     background-repeat: no-repeat; /* Evita que la imagen se repita */
     background-position: right center;
-    background-position-y: 150px;
+    background-position-y: 175px;
+    background-position-x: 87%;
     background-color: #bddde6;
     display: flex;
     flex-direction: column;
@@ -26,6 +27,13 @@ body {
     width: 100%;
     height: 100%;
 }
+.inici{
+    background-image: url(imagenes/targeta.png);
+    background-size: 17% auto; /* Ancho del 25% y altura automática */
+    background-repeat: no-repeat; /* Evita que la imagen se repita */
+    background-position: left;
+    background-position-y: 210px;
+    }
 
 /*imagen de logo */
 .fotos img{
@@ -414,11 +422,12 @@ span{
 
 /* Seccion 3 de la web */
 .queoferim{
-    background-image: url(imagenes/escalada.png);
+    background-image: url(imagenes/sangre.png);
     background-size: 25% auto; /* Ancho del 25% y altura automática */
     background-repeat: no-repeat; /* Evita que la imagen se repita */
-    background-position: left center;
-    background-position-y: 155px; 
+    background-position: left;
+    background-position-y: 270px; 
+    background-position-x: -50px; 
     background-color: #bddde6;
     width: 100%;
     height: 100%;
@@ -532,7 +541,7 @@ span{
     display: block;
     position: relative;
     width: 970px;
-    height: 375px;
+    height: auto;
     background-color: rgb(118, 210, 203);
     border-radius: 10px;
     padding: 2em 1.2em;
