--- a/estilos.css
+++ b/estilos.css
@@ -513,19 +513,16 @@ span{
 
 /* Box N2 */
 
-.box2{
+.box2 img{
     position: relative;
     width: 425px;
     height: 275px;
-    background-color: #de88db;
-    border-radius: 10px;
-    padding: 2em 1.2em;
-    margin: 12px;
+    border-radius:10px;
+    padding:2em 1.2em;
+    margin:12px;
     z-index: 0;
-    overflow: hidden;
-    font-family: "Patrick Hand", serif;
-    gap: 20px;
-
+    overflow:hidden;
+    gap:20px;
 }
 
 .lista ul{
